Переработана отправка сообщений консьюмерам